@@ -79,3 +79,4 @@
 2.1.12 - Fixed: weight loading and setting in case Packeta orders are paged
 2.1.13 - Updated: improved compatibility with PHP versions 7.2,7.4
 2.1.14 - Added: support for Packeta address validation widget in the cart
+       - Added: Address validation setting with 'none', 'optional' and 'required' options
